# MinOS

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  build.rs  grub.cfg  i686-os.json  limine.conf  linker.ld
.cargo/: config.toml
src/: allocator.rs  ata.rs  boot.asm  e1000.rs  elf.rs  fbcon.rs  fd.rs  font.rs  font_data.rs  fs.rs  gdt.rs  gfx.rs  gui.rs  idt.rs  input.rs  isr.asm  keyboard.rs  main.rs  mem.rs  mouse.rs  net.rs  nvme.rs  pci.rs  pic.rs  port.rs  ramdisk.rs  rtc.rs  serial.rs  shell.rs  task.rs  time.rs  user.ld  user.rs  userprog.asm  vga.rs
user/: c4.c  calc.c  crt0.c  ctype.h  hello.c  libminos.c  minos.h  paint.c  stdio.h  stdlib.h  string.h  syscalls.c
