[package]
name = "rustos"
version = "0.1.0"
edition = "2021"
description = "Giriş seviyesi, Rust + Assembly ile yazılmış Multiboot uyumlu bir işletim sistemi çekirdeği"

[[bin]]
name = "rustos"
path = "src/main.rs"

[dependencies]
linked_list_allocator = "0.10"
# getrandom 0.2 (rand_core::OsRng üzerinden rustls-rustcrypto tarafından kullanılır).
# "custom" feature ile bare-metal hedefte kendi RNG'mizi register ediyoruz.
getrandom = { version = "0.2", default-features = false, features = ["custom"] }
webpki-roots = { version = "1", default-features = false }

# rustls: TLS 1.3 (no_std + alloc, özel kripto sağlayıcı).
[dependencies.rustls]
version = "0.23"
default-features = false
features = ["tls12", "custom-provider"]

# Saf-Rust kripto sağlayıcı (RustCrypto): x25519, P-256, RSA, AES-GCM, ChaCha20.
[dependencies.rustls-rustcrypto]
version = "0.0.2-alpha"
default-features = false
features = ["alloc", "tls12"]

[dependencies.smoltcp]
version = "0.13"
default-features = false
features = [
    "alloc",
    "medium-ethernet",
    "proto-ipv4",
    "proto-dhcpv4",
    "socket-tcp",
    "socket-dhcpv4",
    "socket-dns",
]

# Çekirdekte stack-unwinding yok; panik = abort.
[profile.dev]
panic = "abort"

# Bağımlılıkları (rustls + RustCrypto) debug derlemede de optimize et; aksi halde
# emülasyonda TLS el sıkışması/şifre çözme dakikalarca sürer. Kendi çekirdek
# kodumuz yine hata ayıklanabilir kalır.
[profile.dev.package."*"]
opt-level = 3

[profile.release]
panic = "abort"
